[Read Anything][485313063] Fix align full-width images by removing figure side-margins
In Reading Mode, images inside <figure> elements were appearing narrower
than the surrounding text and Title lines because they were inheriting
the browser's User Agent stylesheet specifications.

The Blink User Agent stylesheet describes `<figure>` in `html.css` as:

```
  figure {
      display: block;
      margin-block-start: 1em;
      margin-block-end: 1em;
      margin-inline-start: 40px;   <-- Causes the issue
      margin-inline-end: 40px;     <-- Causes the issue
  }
```

https://source.chromium.org/chromium/chromium/src/+/main:third_party/blink/renderer/core/html/resources/html.css

This creates a 40px inline restriction inside the text display container
view. This CL introduces a scoped override for `<figure>` tags using the
`:has()` pseudo-class selector to align the container with text
paragraphs, enabling nested `.distilled-full-width-img` images to grow
to the actual content bounding box perfectly.


Before: https://screenshot.googleplex.com/6RYrqdX6NtkxKgM
After: https://screenshot.googleplex.com/69GKcXKxyBZAFNz

Bug: 485313063
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/7695216
Commit-Queue: Miguel Ruiz <migueloruiz@google.com>
Cr-Commit-Position: refs/heads/main@{#1604241}

--- a/chrome/browser/resources/side_panel/read_anything/app/app.css
+++ b/chrome/browser/resources/side_panel/read_anything/app/app.css
@@ -216,6 +216,10 @@
   justify-content: center;
 }
 
+figure:has(img.distilled-full-width-img) {
+  margin-inline: 0;
+}
+
 img.distilled-inline-img {
   display: inline;
   vertical-align: middle;
